--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,6 @@
 Some features still needed:
+- during ROM import, show progress bar or something, to prevent clicking multiple times.
 - Include collision & reflectability data
-- trim down tilesets on import
-- cache area canvas?
 - overlays
 - export PNG
 - Swap tiles (within and between palettes), updating area data
