--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 Some features still needed:
-- export PNG
+- make sure importing a ZScream ROM works
 - Swap tiles (within and between palettes), updating area data
 - Undo
 - Way to open a second area/scratch in side panel (instead of palette/tileset editor)
