--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,10 @@
 Some features still needed:
-- import ROM into selected theme, and match against vanilla_map_id and existing palettes
+- when closing/opening editor, remember which areas were open.
+- watch files and prompt to reload
 - import animated tiles
 - Swap tiles (within and between palettes), updating area data
 - Ctrl-R to rebuild all the PNG (in case palette was changed, which could affect everything).
 - Way to open a second area/scratch in side panel (instead of palette/tileset editor)
-- when closing/opening editor, remember which areas were open.
 - overlays
 - World editor
 - Export to ROM
